--- a/src/app/modules/solutions/education/education.component.html
+++ b/src/app/modules/solutions/education/education.component.html
@@ -4,12 +4,11 @@
         <div class="container">
             <div class="container-words">
                 <p class="hero-p">Education week deal</p>
-                <h1 class="hero-title pb-3">Celebrate every student as their future takes shape</h1>
+                <h1 class="hero-title pb-3">Celebrate every student with a sure future.</h1>
                 <p class="hero-p2 pt-2">
-                    We provide cutting-edge technology that enhances the learning experience, making it more
+                    Our cutting-edge technology enhances learning experience, making it more
                     interactive, engaging, and accessible. From smart classrooms to virtual learning environments, our
-                    solutions empower students to learn at their own pace, in their own style. We’re not just improving
-                    education; we’re celebrating every student’s journey towards knowledge and growth.
+                    solutions empower students to learn at their own pace, in their own style.
                 </p>
                 <a routerLink="" class="demo-button">Find gifts</a>
             </div>
