--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -7,13 +7,15 @@
             <video id="background-video" autoplay loop muted>
                 <source src="/assets/back3.mp4" type="video/mp4">
         </video>
-        <h1 class="background-video-h1 header-hero">Digitally empowering how we work, learn and live .</h1>
-        <h2 class="background-video-h2 header-p">We are Proscene, reshaping how people interact with the world. We
-            deliver outstanding audio and video experiences in any space. Our Audio and Video solutions enhance your
-            experiences whether you're working, learning, or at home..</h2>
-        <p class="text-left pt-3">
-            <button class="demo-button ml-2">Connect with us!</button>
-        </p>
+        <div class="container mx-auto px-2">
+            <h1 class="background-video-h1 header-hero">Digitally empowering how we <span class="span">live</span>, learn and work .</h1>
+            <h2 class="background-video-h2 header-p">We are Proscene, reshaping how people interact with the world. We
+                deliver outstanding audio and video experiences in any space. Our Audio and Video solutions enhance your
+                experiences whether you're working, learning, or at home..</h2>
+            <p class="text-left pt-3">
+                <button class="demo-button ml-2">Connect with us!</button>
+            </p>
+        </div>
         
         <div class="solutions">
             <h3 class="h3-solutions center">Smart and easy-to-use Audio and visual<br>
@@ -21,31 +23,31 @@
             </h3>
             <div class="card-container">
                 <div class="card">
-                    <ng-icon name="heroCamera" class="icons"></ng-icon>
+                    <div class="icons">📸</div>
                     <h4 class="h4-solutions">Create</h4>
-                    <p class="p-solutions">
+                    <p class="p-solutions text-center">
                         Unleash Your Creativity:<br> Our state-of-the-art<br> platform empowers you
                     </p>
                 </div>
                 <div class="card">
-                    <ng-icon name="heroUserGroup" class="icons"></ng-icon>
+                    <div class="icons">👩‍👩‍👧‍👦</div>
                     <h4 class="h4-solutions">Share</h4>
-                    <p class="p-solutions">
+                    <p class="p-solutions  text-center">
                         Seamlessly distribute your<br> videos across multiple channels,<br> reach your audience
                     </p>
                 </div>
                 <div class="card">
-                    <ng-icon name="heroTv" class="icons"></ng-icon>
+                    <div class="icons">📺</div>
                     <h4 class="h4-solutions">Watch</h4>
-                    <p class="p-solutions">
+                    <p class="p-solutions center">
                         Watch as stories unfold,<br> ideas come to life, and<br> creativity takes center stage.
                     </p>
     
                 </div>
                 <div class="card">
-                    <ng-icon name="heroFaceSmile" class="icons"></ng-icon>
-                    <h4 class="h4-solutions">Enjoy</h4>
-                    <p class="p-solutions">
+                    <div class="icons">😀</div>
+                    <h4 class="h4-solutions">Enjoy </h4>
+                    <p class="p-solutions center">
                         Enjoy the richness of <br>high-definition content, <br>meticulously crafted for you.
                     </p>
                 </div>
@@ -58,45 +60,40 @@
         <div class="partner-section">
             <h3 class="h3-solutions center pt-3 pb-4">Our Partners
             </h3>
-            <p class="p-solutions1 p-3 center">We work with renowed brands to bring you the latest solutions to solve your
+            <p class="p-solutions p-3 center">We work with renowed brands to bring you the latest solutions to solve your
                 specific needs. </p>
             <div class="partner-images pb-9">
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/Lg.png" alt="" srcset="" class="w-100 partner-icon ">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/panasonic.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/Optoma.png" alt=center pt-7 pb-7 srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/lifesize.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/samsung.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/samsung.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/samsung.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-    
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/Lg.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/panasonic.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/panasonic.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/Optoma.png" alt="" srcset="" class="w-100 partner-icon">
-                </div>
-                <div class="center pt-7 pb-7">
-                    <img src="./assets/lifesize.png" alt="" srcset="" class="w-100 partner-icon">
+                <div class="container-p-img">
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/cisco.png" alt=center pt-7 pb-7 srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/CRESTRON.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/Extron.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/Google.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/logitech.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/Microsof.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/neat.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/Zoom.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/Poly.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/QSYS.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
                 </div>
             </div>
         </div>
@@ -105,7 +102,7 @@
                 <div>
                     <h3 class="h3-solutions pt-3 pb-4">Simplify your video workflows
                     </h3>
-                    <p class="p-solutions1 pt2 pb-4">Ease of use is a central tenet of Proscene. We believe it should be
+                    <p class="p-solutions pt2 pb-4">Ease of use is a central tenet of Proscene. We believe it should be
                         easy to
                         get started, easy to integrate, and simple to switch from existing systems and processes. </p>
                     <div class=" center center1"><a routerLink="solutions" class="picture-link pb-9">Our Expertise ></a></div>
@@ -117,13 +114,13 @@
         </div>
         <div class="picture-section mt-9" style="background-color: #f4f4f4d5;">
             <div class="section-image center p-3">
-                <img src="/assets/AV.png" alt="" srcset="">
+                <img src="/assets/smilingwoman.jpg" alt="" srcset="">
             </div>
             <div class="section1 flex justify-center items-center">
                 <div>
                     <h3 class="h3-solutions pt-3 pb-4">Seamless integration with the tools you already use.
                     </h3>
-                    <p class="p-solutions1 pt2 pb-4"> Proscene’s interoperability with popular video
+                    <p class="p-solutions pt2 pb-4"> Proscene’s interoperability with popular video
                         conferencing solutions allows for seamless communication. Connect with Learning Management
                         Systems for the complete learning experience. Record meetings from Zoom, Teams, and Webex. </p>
                     <div class=" center center1"><a routerLink="solutions" class="picture-link pb-9">Learn More ></a></div>
@@ -137,7 +134,7 @@
                 <div>
                     <h3 class="h3-solutions pt-3 pb-4">Seamless integration with the tools you already use.
                     </h3>
-                    <p class="p-solutions1 pt2 pb-4"> Proscene’s interoperability with popular video
+                    <p class="p-solutions pt2 pb-4"> Proscene’s interoperability with popular video
                         conferencing solutions allows for seamless communication. Connect with Learning Management
                         Systems for the complete learning experience. Record meetings from Zoom, Teams, and Webex. </p>
                     <div class=" center center1"><a routerLink="solutions" class="picture-link pb-9">Learn More ></a></div>
@@ -157,7 +154,7 @@
                 <div>
                     <h3 class="h3-solutions pt-3 pb-4">Effortless collaboration with your favorite platforms.
                     </h3>
-                    <p class="p-solutions1 pt2 pb-4"> Integrate with Content Management Systems for a holistic content experience. Archive meetings from Skype, Google Meet, and GoToMeeting
+                    <p class="p-solutions pt2 pb-4"> Integrate with Content Management Systems for a holistic content experience. Archive meetings from Skype, Google Meet, and GoToMeeting
                         Our platform offers the ability to disseminate organizational knowledge with solutions that are intuitive, comprehensive, and widely accepted.. </p>
                     <div class=" center center1"><a routerLink="solutions" class="picture-link pb-9">Learn More ></a></div>
                 </div>
