--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -1,4 +1,8 @@
 @import 'src/themes.scss';
+*{
+    // font-family: 'Segoe UI Emoji';
+    font-family: "Noto Sans", sans-serif;
+}
 img{
     border-radius: 10px;
 }
@@ -8,7 +12,6 @@ img{
 
 #background-video {
     width: 100%;
-    max-width: 1500px;
     height: 100svh;
     object-fit: cover;
     position: absolute;
@@ -20,9 +23,12 @@ img{
     background-color: rgba(0,0,0,0.5);
     
  }
+ .span{
+    color: $yellowish;
+ }
  .background-video-h2, .background-video-h1 {
     color: white;
-    font-family:text-font;
+    // font-family:text-font;
     text-align: left;
     padding-bottom: .5rem;
     padding-inline: 1rem;
@@ -31,7 +37,7 @@ img{
  .header-hero{
     color: $white;
     padding-top: 27vh;
-    font-weight: 900;
+    font-weight: 700;
     font-size: clamp(2.5rem, 10vw + 0.5rem, 3.5rem);
     text-transform: capitalize;
 }
@@ -43,41 +49,26 @@ img{
 .solutions{
     // padding-top: 12em;
     margin-top: 65vh;
-    font-family: thin;
+    // font-family: thin;
 }
 .icons{
-    font-size: 70px;
+    font-size: 50px;
 }
 .icons1{
     font-size: 40px;
 }
 .h3-solutions{
-font-size: clamp(1.8em ,2.5em, 2.5em);
+    color: $the-blue;
+font-size: clamp(1.8em ,2.2em, 2.5em);
   line-height: 3rem;
-  color: #323232;
-  font-weight: 300;
+  font-weight: 600;
 }
 .h4-solutions{
-    
-        font-size: 1.5em;
-        font-weight: 300;
-        color: #323232;
-        padding-block: 1em;
+  font-size: 1.72rem;
+  font-weight: 600;
+  color: #323232;
+  padding-block: 1em;
   
-}
-.p-solutions{
-    font-size: 1.2em;
-  font-weight: 200;
-  line-height: 1.4;
-text-align: center;
-  color: #787878;
-}
-.p-solutions1{
-    font-size: 1.2em;
-  line-height: 1.4;
-  font-weight: 400;
-  color: #575555f5;
-  font-family: 'text'
 }
 .card{
     display: flex;
@@ -89,11 +80,17 @@ text-align: center;
     background-color: #f4f4f4d5;
 }
 .partner-icon{
-    max-width: 80px;
+    max-width: 160px;
+}
+.container-p-img{
+    max-width: min(80%, 800px);
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    justify-content: center;
 }
 .partner-images{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
 }
 .section1{
     padding-inline: 1em;
@@ -101,6 +98,7 @@ text-align: center;
 }
 .picture-link{
     color: #0a58ca;
+    font-weight: 300;
 }
 .testament-p{
     padding-block: 2em;
@@ -121,7 +119,7 @@ text-align: center;
         padding-top: 30vh;
     }
     .partner-images{
-        grid-template-columns: repeat(3, 1fr);
+        
     } 
     .picture-section{
         display: flex;
@@ -137,8 +135,8 @@ text-align: center;
 }
 @media (min-width:60em) {
     .header-hero{
-        padding-top: 45vh;
-        width: 50%;
+        padding-top: 25vh;
+        width: 60%;
     }
     .header-p{
         width: 50%;
@@ -156,7 +154,7 @@ text-align: center;
     }
 
     .partner-images{
-        grid-template-columns: repeat(6, 1fr);
+        // grid-template-columns: repeat(6, 1fr);
     }
     .picture-section{
         display: flex;
