--- a/src/app/modules/solutions/education/education.component.scss
+++ b/src/app/modules/solutions/education/education.component.scss
@@ -1,13 +1,17 @@
 @import 'src/themes.scss';
+*{
+    font-family: 'text-font'!important;
+}
 .hero{
     position: relative;
     height: 100vh;
 }
 .hero-title{
+    font-weight: 900;
+    font-size: clamp(2.5rem, 10vw + 0.5rem, 3.5rem);
+    text-transform: capitalize;
     color: $the-blue;
     padding-top: 2em;
-    font-size: clamp(2.5rem, 10vw + 0.5rem, 3.4rem);
-    line-height: 1;
     z-index: 2;
     position: relative;
 }
@@ -165,9 +169,6 @@ h5{
 }
 
 @media (min-width:60em) {
-    .hero-title{
-        padding-top: 3em;
-    }
     .hero-image{
     -webkit-mask-image: linear-gradient(to left, black, black 10%, transparent);
     mask-image: linear-gradient(to left, black, black 10%, transparent);     
