font deletion, navigationn font addition, education page tweaks

--- a/src/app/modules/shared/navbar/navbar.component.scss
+++ b/src/app/modules/shared/navbar/navbar.component.scss
@@ -2,7 +2,7 @@
 @import 'src/themes.scss';
 *{
     font-weight: 400;
-    // font-family: 'text';
+    font-family: "Noto Sans", sans-serif;
 }
 .logo1{
     height:"30px" !important;
