--- a/src/app/modules/solutions/education/education.component.html
+++ b/src/app/modules/solutions/education/education.component.html
@@ -5,7 +5,7 @@
             <div class="container-words">
                 <p class="hero-p">Education week deal</p>
                 <h1 class="hero-title pb-3">Celebrate every student with a sure future.</h1>
-                <p class="hero-p2 pt-2">
+                <p class="hero-p2 header-p pt-2">
                     Our cutting-edge technology enhances learning experience, making it more
                     interactive, engaging, and accessible. From smart classrooms to virtual learning environments, our
                     solutions empower students to learn at their own pace, in their own style.
@@ -67,7 +67,7 @@
                 <div class="image imageone"></div>
                 <div class="words">
                     <h5 class=" pt-6 width: 90%; padding-block">Interactive classes</h5>
-                    <p class="pt-6 width: 90%; padding-block padding-block">Our solutions provide interactive
+                    <p class="pt-6 width: 90%; padding-block padding-block p-solutions">Our solutions provide interactive
                         experiences that can make learning more engaging. This can be particularly beneficial for
                         younger learners who learn best through interaction and play.</p>
                 </div>
@@ -81,8 +81,8 @@
                 <div class="image imagetwo"></div>
                 <div class="words padding-block">
                     <h5 class=" pt-6">Distance Learning:</h5>
-                    <p class="pt-6">In the current climate where remote learning is becoming increasingly necessary, our
-                        solutions can provide high-quality, interactive learning experiences from the safety of home.
+                    <p class="pt-6 p-solutions">In the current trend where remote learning is becoming increasingly necessary, our
+                        solutions can provide high-quality, interactive learning experiences from the safety and comfort of our homes.
                     </p>
                 </div>
                 <div class=" pt-6 pb-6 padding-block">
@@ -95,7 +95,7 @@
                 <div class="image imagethree"></div>
                 <div class="words">
                     <h5 class=" pt-6 width: 90%; padding-block">Visual Demonstrations</h5>
-                    <p class="pt-6 width: 90%; padding-block">Complex concepts can be simplified using visual aids,
+                    <p class="pt-6 width: 90%; padding-block p-solutions">Complex concepts can be simplified using visual aids,
                         making them easier for young learners to understand. Our solutions can provide clear, concise
                         visual demonstrations to asssist in understanding.</p>
                 </div>
@@ -114,12 +114,12 @@
             <h2 class="h2-offers">
                 Latest products and innovations from Proscene
             </h2>
-            <p class="pt-6  pb-6 width: 90%; padding-block" style="padding-left: 0;">Complex concepts can be simplified using visual aids, making them
+            <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Complex concepts can be simplified using visual aids, making them
                 easier for young learners to understand. Our solutions can provide clear, concise visual demonstrations
                 to asssist in understanding.</p>
                 <a routerLink="" class="demo-button">Explore Proscene</a>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="padding-block flex1a">Dicover more ></a>
+                    <a routerLink="" class="padding-block flex1a" style="padding-left: 0;">Dicover more ></a>
                 </div>
 
         </div>
@@ -130,10 +130,10 @@
             <h2 class="h2-offers">
                 Get the 2024 Proscene report
             </h2>
-            <p class="pt-6  pb-6 width: 90%; padding-block" style="padding-left: 0;">How ready are you to tackle communication in the modern world? You can find out by checking out our latest research below.</p>
+            <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">How ready are you to tackle communication in the modern world? You can find out by checking out our latest research below.</p>
                 <a routerLink="" class="demo-button">Read report</a>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="padding-block flex1a">View trials and demos ></a>
+                    <a routerLink="" class="padding-block flex1a" style="padding-left: 0;">View trials and demos ></a>
                 </div>
 
         </div>
@@ -149,12 +149,12 @@
             <h2 class="h2-offers">
                 Latest products and innovations from Proscene
             </h2>
-            <p class="pt-6  pb-6 width: 90%; padding-block" style="padding-left: 0;">Complex concepts can be simplified using visual aids, making them
+            <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Complex concepts can be simplified using visual aids, making them
                 easier for young learners to understand. Our solutions can provide clear, concise visual demonstrations
                 to asssist in understanding.</p>
                 <a routerLink="" class="demo-button">Explore Proscene</a>
                 <div class=" pt-6 pb-6">
-                    <a routerLink="" class="padding-block flex1a">Dicover more ></a>
+                    <a routerLink="" class="padding-block flex1a" style="padding-left: 0;">Dicover more ></a>
                 </div>
 
         </div>
