--- a/src/app/modules/shared/footer/footer.component.html
+++ b/src/app/modules/shared/footer/footer.component.html
@@ -46,9 +46,9 @@
             <p> © 2024 Proscene Systems Limited. All rights reserved. </p>
         </div>
         <div class="bottom-links">
-            <div><a href="http://">privacy policy</a></div>
-            <div><a href="http://">Terms of use</a></div>
-            <div><a href="http://">Copyright policy</a></div>
+            <div><a routerLink="">privacy policy</a></div>
+            <div><a routerLink="">Terms of use</a></div>
+            <div><a routerLink="">Copyright policy</a></div>
         </div>
     </div>
 </div>
