--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -104,7 +104,7 @@
                 </div>
             </li>
             <li class="active">
-                <a routerLink="/services">
+                <a routerLink="/blog">
                     <span aria-hidden="true"></span>Blog
                 </a>
             </li>
