--- a/src/app/modules/blog/blog/blog.component.html
+++ b/src/app/modules/blog/blog/blog.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<main>
 <div class="blog-land">
     <div class="header">
         <h1 class=" center"><span class="mr-4">Stories </span> and <span class="ml-4"> ideas</span></h1>
@@ -14,7 +15,7 @@
                 <div class="big-card-words">
                     <p class="date pt-2 pb-2">May 22, 2024</p>
                     <h3 class="big-card-words-h ">Why IT Leaders Are Evolving the Network into a High-Performance Digital Engine</h3>
-                    <p class="bigcard-words-p ">Society expects and depends on an ever-increasing fusion of digital and physical experiences for everyday life and business progress. This dependency is apparent in the 2024 Cisco Global Networking Trends Report, which shows a continued correlation between network investment in fueling digital experiences and the benefits felt by organizations.</p>
+                    <p class="bigcard-words-p pt-2">Society expects and depends on an ever-increasing fusion of digital and physical experiences for everyday life and business progress. This dependency is apparent in the 2024 Cisco Global Networking Trends Report, which shows a continued correlation between network investment in fueling digital experiences and the benefits felt by organizations.</p>
                 </div>
             </div>
             <div class="flex-3">
@@ -48,10 +49,47 @@
             </div>
         </div>
     </div>
-    <main>
-        <div class="main-container">
-
+    <div class="first">
+        <div>
+            <h2 class="center pt-7">Success stories...</h2>
         </div>
-    </main>
+        <div class="center"></div>
+    </div>
+        <div class="main-container">
+            <div class="card-grid">
+                <div class="card-grid-img"></div>
+                <div class="card-grid-w">
+                    <p class="date pt-2 pb-2">May 22, 2024</p>
+                    <h3 class="big-card-words-h ">The race against economic inequality within emerging markets – a case for SMEs</h3>
+                    <p class="bigcard-words-p pt-2">Society expects and depends on an ever-increasing fusion of digital and physical experiences for everyday life and business progress. This dependency is apparent in the 2024 Cisco Global Networking Trends Report, which shows a continued correlation between network investment in fueling digital experiences and the benefits felt by organizations.</p>
+                </div>
+            </div>
+            <div class="card-grid">
+                <div class="card-grid-img"></div>
+                <div class="card-grid-w">
+                    <p class="date pt-2 pb-2">May 22, 2024</p>
+                    <h3 class="big-card-words-h ">The race against economic inequality within emerging markets – a case for SMEs</h3>
+                    <p class="bigcard-words-p pt-2">Society expects and depends on an ever-increasing fusion of digital and physical experiences for everyday life and business progress. This dependency is apparent in the 2024 Cisco Global Networking Trends Report, which shows a continued correlation between network investment in fueling digital experiences and the benefits felt by organizations.</p>
+                </div>
+            </div>
+            <div class="card-grid">
+                <div class="card-grid-img"></div>
+                <div class="card-grid-w">
+                    <p class="date pt-2 pb-2">May 22, 2024</p>
+                    <h3 class="big-card-words-h ">The race against economic inequality within emerging markets – a case for SMEs</h3>
+                    <p class="bigcard-words-p pt-2">Society expects and depends on an ever-increasing fusion of digital and physical experiences for everyday life and business progress. This dependency is apparent in the 2024 Cisco Global Networking Trends Report, which shows a continued correlation between network investment in fueling digital experiences and the benefits felt by organizations.</p>
+                </div>
+            </div>
+            <div class="card-grid">
+                <div class="card-grid-img"></div>
+                <div class="card-grid-w">
+                    <p class="date pt-2 pb-2">May 22, 2024</p>
+                    <h3 class="big-card-words-h ">The race against economic inequality within emerging markets – a case for SMEs</h3>
+                    <p class="bigcard-words-p pt-2">Society expects and depends on an ever-increasing fusion of digital and physical experiences for everyday life and business progress. This dependency is apparent in the 2024 Cisco Global Networking Trends Report, which shows a continued correlation between network investment in fueling digital experiences and the benefits felt by organizations.</p>
+                </div>
+            </div>
+        </div>
+    
 </div>
+</main>
 <app-footer></app-footer>
