refining the contact form

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -230,7 +230,7 @@
                 
         </div>
         <div style="background-color: #f4f4f4d5;" class="pb-12">
-            <app-form></app-form>
+            <app-contactform></app-contactform>
         </div>
         <app-footer></app-footer>
     </div>
