--- a/src/app/modules/blog/blog/blog.component.html
+++ b/src/app/modules/blog/blog/blog.component.html
@@ -91,6 +91,9 @@
         </div>
     
 </div>
+<div class="pt-4 pb-9">
+    <div class="center"><a routerLink="" class="demo-button">Get started</a></div>
+</div>
 </main>
 <app-contactform></app-contactform>
 <app-footer></app-footer>
