--- a/src/app/modules/blog/blog/blog.component.scss
+++ b/src/app/modules/blog/blog/blog.component.scss
@@ -9,6 +9,7 @@ $biggest-h:clamp(1.8019rem, 1.0209rem + 3.9051vw, 4.6819rem);
     height: 100%;
     color: #f3f3fe;
     background-color: $the-blue;
+    padding-bottom: 2.5rem;
 }
 .blog-land{
     padding-block: 7vh;
