--- a/src/app/modules/shared/contactform/contactform.component.html
+++ b/src/app/modules/shared/contactform/contactform.component.html
@@ -80,7 +80,7 @@
           <a href="">
             <div class="icon-side-words">
               <h3>Find support</h3>
-            <p>							Get always-on access to technical support, self-help, and your ServiceNow instances.</p>
+            <p>Get always-on access to technical support, self-help, and your Proscene instances.</p>
             </div>
           </a>
         </div>
@@ -91,7 +91,7 @@
           <a href="">
             <div class="icon-side-words">
               <h3>Experience a demo</h3>
-            <p>							Get always-on access to technical support, self-help, and your ServiceNow instances.</p>
+            <p>See how Proscene solutions can streamline and unite your organization to achieve goals..</p>
             </div>
           </a>
         </div>
@@ -102,7 +102,7 @@
           <a href="">
             <div class="icon-side-words">
               <h3>Locate our office</h3>
-            <p>							Get always-on access to technical support, self-help, and your ServiceNow instances.</p>
+            <p>We have experts in regions around Kenya, all ready to support your digital journey.</p>
             </div>
           </a>
         </div>
