--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -109,12 +109,12 @@
                 </a>
             </li>
             <li class="active primarymodes pl-2">
-                <a routerLink="/task">
+                <a routerLink="/coming-soon">
                     <span aria-hidden="true" class="black"> Shop</span>
                 </a>
             </li> 
             <li class="active primarymodes">
-                <a routerLink="/rate">
+                <a routerLink="/contact-us">
                     <span aria-hidden="true" class="black">Contact us</span>
                 </a>
             </li>
