--- a/src/themes.scss
+++ b/src/themes.scss
@@ -6,4 +6,6 @@ $pinkish:#e0a8d9ff;
 $yellowish:#ED4B25;
 $clr-secondary:#011936;
 
-
+// Both of the h1 and p headings below have been used for just the coming soon page only- the two after this comment.
+$h1-big:clamp(1.8019rem, 1.0209rem + 3.9051vw, 4.6819rem);
+$p-small:clamp(1.2656rem, 1.0692rem + 0.9822vw, 1.99rem);
